--- a/contactus.html
+++ b/contactus.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Nostalgia Central</title>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500&display=swap" rel="stylesheet">
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
-</head>
-<body>
-	<header>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+ 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <head>
+  </head>
+  <title>Nostalgia Central</title>
+  <body>
+<header>
 		<h2><a href="#"><img alt="" src="images/logo.png"></a></h2>
 		<ul class="nav">
 			<li><a href="index.html">Index</a></li>
@@ -17,16 +18,126 @@
             <li><a href="contactus.html">Contact us</a></li>
 		</ul>
 	</header>
-	<section class="banner-area">
-		<div class="banner-img"></div>
-		<h3> Take a trip to the past</h3>
-		<h1>Nostalgia  <span>  Central</span></h1><a class="banner-btn" href="#">More Info</a>
+</div>
+
+<style>
+	.carousel-item{
+		height:32rem;
+		background: #777;
+		color:white;
+		position:relative;
+	}
+	.container{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		padding-bottom:50px;
+	}
+</style>
+<div id ="myCarousel" class="carousel slide"
+data-bs-ride="carousel">
+	<ol class="carousel-indicators">
+		<li data-bs-target="#myCarousel"
+		 data-bs-slide-to="0" class="active"></li>
+		<li data-bs-target="#myCarousel"
+		 data-bs-slide-to="1"></li>
+		<li>
+		<li data-bs-target="#myCarousel"
+		 data-bs-slide-to="2"></li>
+		<li>
+	</ol>
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+		<div class="container">
+			<h1>Example</h1>
+			<p> hey </p>
+			<a href="#" class="btn btn-lg btn-primary">
+				sign up today
+			</a>
+		</div>
+		</div>
+		<div class="carousel-item">
+	<div class="container">
+		<h1>Example</h1>
+		<p> hey </p>
+		<a href="#" class="btn btn-lg btn-primary">
+			sign up today
+		</a>
+	</div>
+	 	</div>
+		 <div class="carousel-item">
+			<div class="container">
+				<h1>Example</h1>
+				<p> hey </p>
+				<a href="#" class="btn btn-lg btn-primary">
+					sign up today
+				</a>
+			</div>
+				 </div>
+	</div>
+	<a href="#myCarousel"
+	class="carousel-control-prev" role="button"
+	data-slide="prev">
+		<span class="sr-only">Previous</span>
+		<span class="carousel-control-prev-icon"
+		aria-hidden="true"></span>
+	</a>
+	<a href="#myCarousel"
+	class="carousel-control-next" role="button"data-slide="next">
+		<span class="sr-only">Next</span>
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+	</a>
+</div>
+		</div>
 	</section>
-	<section class="about-area" id="about">
-		<h3 class="section-title">About <span>Us</span></h3>
+	<section class="services-area" id="services">
+		<h3 class="section-title">Booking <span> Services</span></h3>
+		<ul class="services-content">
+			<li>
+				<img alt="" src="images/1.jpg">
+				<h4>Prayer</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
+			</li>
+			<li>
+				<img alt="" src="images/3.jpg">
+				<h4>offerings</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
+			</li>
+			<li>
+				<img alt="" src="images/4.jpg">
+				<h4>Blessings</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
+			</li>
+		</ul>
+	</section>
+	<section class="contact-area" id="contact">
+		<h3 class="section-title">Our <span>Contact</span></h3>
+		<ul class="contact-content">
+			<li>
+				<i class="fa fa-map-marker"></i>
+				<p>129, New York<br>
+				United States</p>
+			</li>
+			<li>
+				<i class="fa fa-phone"></i>
+				<p>+123 456 789<br>
+				+789 456 123</p>
+			</li>
+			<li>
+				<i class="fa fa-envelope"></i>
+				<p>info@bishop.com<br>
+				yourdomain@website.com</p>
+			</li>
+		</ul>
 	</section>
 	<footer>
-		<p>All Right Reserved by Your Website</p>
+		<div class="col-sm-12 col-lg-4">
+		<a href="#" class="fa fa-youtube"></a>
+		<a href="#" class="fa fa-instagram"></a>
+		<a href="#" class="fa fa-twitter"></a>
+		<p>Nostalgia Central</p> 
 	</footer>
+	
 </body>
 </html>
